--- a/1-1-0.MD
+++ b/1-1-0.MD
@@ -4,17 +4,17 @@
  
 नारायणम् नमस्कृत्य नरम् च एव नर-उत्तमम्। देवीम् सरस्वतीम् च एव ततः जयम् उदीरयेत्।।
 
-\*नारायणम् = Narayana
-\*नमस्कृत्य = Having saluted (narayana, nara and saraswati)
-\*नरम् = Nara
-\*च एव = and
-\*नर-उत्तमम् = male-highest => highest of all male beings (Nara)
-\*देवीम् = Goddess
-\*सरस्वतीम् = Saraswati
-\*च एव = and
-\*ततः = then
-\*जयम् = success
-\*उदीरयेत्(उत्-ईरयेत्) (जयम्) = one may cry (success)
+*नारायणम् = Narayana
+*नमस्कृत्य = Having saluted (narayana, nara and saraswati)
+*नरम् = Nara
+*च एव = and
+*नर-उत्तमम् = male-highest => highest of all male beings (Nara)
+*देवीम् = Goddess
+*सरस्वतीम् = Saraswati
+*च एव = and
+*ततः = then
+*जयम् = success
+*उदीरयेत्(उत्-ईरयेत्) (जयम्) = one may cry (success)
 
 Having saluted the Supreme Deity (Narayana) and the highest of all male beings (Nara) and also the Goddess of Learning (Sarasvati), let us cry success!
  
