--- a/1-1-11.MD
+++ b/1-1-11.MD
@@ -11,6 +11,6 @@
 -   अहम् = I
 -   ताः = those
 -   विचित्र-अर्थाः => varied-meanings = the ones which have varied meanings
--   महाभारत-संश्रिताः => Mahabharata-collections = the collection of the Mahabharata stories
+-   महाभारत-संश्रिताः => Mahabharata-joined = the stories related to the Mahabharata
 
 "and also having heard properly those Mahabharata stories with varied meanings which were recited by Vaishampayana"
