--- a/1-1-22.MD
+++ b/1-1-22.MD
@@ -11,6 +11,6 @@
 - पुरुष्टुतम् = जिस्की प्रशंसा बहुतों द्वारा किया जाता है उसको = much praised
 - ऋतम् = जो सत्य उसको = one who is truth
 - एकाक्षरम् = जिसका नाम ॐ है = one whose name is one syallable, om
-- ब्रह्म = ब्रह्मन् = the primordial being
+- ब्रह्म = ब्रह्म = the primordial being
 - व्यक्त-अव्यक्तम् = जिसे कहा जाये य न कहा जाये उसको = one who is said and unsaid
 - सनातनम् = जो सनातन है उसको = the one who is constant
